# pyffi-cpp

./: AUTHORS.TXT  CMakeLists.txt  Doxyfile  FFIFileFormat.cpp.patch  LICENSE.TXT  README  SConstruct  oldtest.cpp  runastyle.sh  test.cpp
benchmark/: CMakeLists.txt  attribute_access.cpp
cffi/: Exceptions.hpp  exceptions.hpp
cffi/object_models/: any_type.hpp  attribute.hpp  expression.hpp  format.hpp  meta_attribute.hpp  meta_struct.hpp  metaattribute.hpp  object.hpp  struct.hpp
cffi/objectmodels/: Attribute.hpp  Expression.cpp  Expression.hpp  MetaAttribute.hpp  MetaStruct.hpp  SConscript  Struct.cpp  Struct.hpp  format.hpp
include/: pyffi.hpp
include/pyffi/: exceptions.hpp
include/pyffi/object_models/: any_type.hpp  args.hpp  class.hpp  expression.hpp  file_format.hpp  fileformat.hpp  format.hpp  instance.hpp  int_type.hpp  map.hpp  meta_attribute.hpp  meta_struct.hpp  object.hpp  object_map.hpp  struct.hpp
include/pyffi/object_models/ffi/: file_format.hpp  fileformat.hpp
include/pyffi/object_models/xml/: file_format.hpp
scons-tools/: crossmingw.py
src/: CMakeLists.txt  FFITool.java  XMLTool.java  ffi.java  ffi2ffi.java  pyffi.cpp  pypyffi.cpp  xml2ffi.java
src/object_models/: CMakeLists.txt
src/object_models/ffi/: CMakeLists.txt  FFI.g  FFIFileFormat.g  file_format.cpp  fileformat.cpp
src/pyffi/: CMakeLists.txt  __init__.py  _pyffi.cpp
src/pyffi/object_models/: CMakeLists.txt  class.cpp
src/pyffi/object_models/ffi/: CMakeLists.txt  FFI.g  FFIFileFormat.g  FFITree.g  FFITreeOpt.g  FFITreeTemplate.g  ffi.stg  file_format.cpp
src/pyffi/object_models/xml/: CMakeLists.txt  XML.g  file_format.cpp
test/: CMakeLists.txt  runtest.cpp
test/libantlr3c/: CMakeLists.txt  antlr3tokenqueue_test.cpp
test/object_models/: CMakeLists.txt  args_test.cpp  map_test.cpp  meta_struct_test.cpp  object_test.cpp
test/object_models/ffi/: CMakeLists.txt  ffi_test.cpp
test/pyffi/: CMakeLists.txt
test/pyffi/object_models/: CMakeLists.txt  class_test.cpp  expression_test.cpp  instance_test.cpp  int_type_test.cpp  map_test.cpp  meta_struct_test.cpp  object_map_test.cpp  object_test.cpp  struct_test.cpp
test/pyffi/object_models/ffi/: CMakeLists.txt  ffi_test.cpp  file_format_name_test.cpp  test_array.ffi  test_class.ffi  test_conditions.ffi  test_enum.ffi  test_expression.ffi  test_invalid.ffi  test_kwargs.ffi  test_multi_name.ffi  test_name.ffi  test_parameter.ffi  test_type.ffi  test_type_doc.ffi
test/pyffi/object_models/xml/: CMakeLists.txt  test_basic.xml  test_enum.xml  test_full.xml  test_header.xml  test_invalid.xml  test_minimal.xml  test_version.xml  xml_test.cpp
